# CampusFlow

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dump.rdb  test-sample-data.js  test_brainstorm.py
.github/workflows/: ci.yml
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/src/: auth.py  celery_app.py  database.py  models.py  tasks.py
apps/backend/src/routers/: assignments.py  events.py
apps/frontend/: .gitignore  Dockerfile  package-lock.json  package.json
apps/frontend/src/: App.tsx  main.tsx
apps/frontend/src/app/: globals.css
apps/frontend/src/components/: Layout.tsx
apps/frontend/src/contexts/: AuthContext.tsx
apps/frontend/src/hooks/: useAssignments.ts  useEvents.ts
apps/frontend/src/lib/: api.ts
apps/frontend/src/pages/: Assignments.tsx  AuthCallback.tsx  Dashboard.tsx  Events.tsx  Login.tsx
apps/frontend/src/types/: index.ts
backend/: .env  .flake8  .gitignore  DATABASE_SETUP.md  QUICKSTART.md  celerybeat-schedule  integration_test.py  pyproject.toml  requirements.txt  start-local.sh  test_stream_roles.py
backend/apps/frontend/: .gitignore
backend/src/: auth.py  brainstorm_redis_design.md  brainstorm_service.py  database.py  main.py  models.py  sample_data.py  schemas.py  tasks.py
backend/src/routers/: assignments.py  auth.py  brainstorm.py  events.py  lost_items.py  profile.py  streams.py  streams.py.backup
frontend/: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  README.md  package-lock.json  package.json  server.js  simple-server.js  test.js
frontend/public/: app.js  index.html
infra/: .gitignore
